--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -4,35 +4,22 @@ header {
   nav {
     display: flex;
     justify-content: space-between;
-    margin: 15px 20px;
+    margin: 1rem 1.25rem;
 
     .logo-wrapper {
-      width: 78px;
-      padding: 15px;
+      width: 4.875rem;
+      padding-top: 0.5rem;
     }
 
     .nav-links {
       display: flex;
       justify-content: space-between;
-      gap: 2px;
+      gap: 0.125rem;
 
       p {
-        font-size: 38px;
+        font-size: 2.375rem;
         text-align: center;
         color: $darkGrayColor;
-      }
-
-      .burger-menu-btn {
-        img {
-          margin-top: -10px;
-          margin-left: -5px;
-        }
-      }
-
-      .toggle-menu {
-        img {
-          width: 26px;
-        }
       }
 
       .toggle-btns {
@@ -44,8 +31,8 @@ header {
           z-index: 10;
 
           .btn {
-            margin-top: 1px;
-            border: 1px solid $darkGrayColor;
+            margin-top: 0.063rem;
+            border: 0.063rem solid $darkGrayColor;
           }
         }
       }
@@ -54,9 +41,9 @@ header {
 
   .menu {
     position: absolute;
-    top: 62px;
-    right: 20px;
-    width: 184px;
+    top: 3.875rem;
+    right: 1.25rem;
+    width: 11.5rem;
     height: 90vh;
     z-index: -1;
     background: $darkGrayWithOpacity 0% 0% no-repeat padding-box;
