--- a/styles/_mainStyles.scss
+++ b/styles/_mainStyles.scss
@@ -2,7 +2,7 @@ body {
   background-color: $darkGrayColor;
 
   p {
-    font-size: 22px;
+    font-size: 1.375rem;
     text-align: left;
     font: normal normal normal 22px/27px Sandro Universal;
     letter-spacing: 0px;
@@ -11,8 +11,8 @@ body {
   }
 
   .btn {
-    width: 60px;
-    height: 46px;
+    width: 3.75rem;
+    height: 2.875rem;
     cursor: pointer;
     background: $lightGrayColor 0% 0% no-repeat padding-box;
     opacity: 1;
