--- a/css/global.css
+++ b/css/global.css
@@ -192,6 +192,7 @@ header nav .nav-links .toggle-btns {
   display: none;
 }
 header nav .nav-links .toggle-btns.active {
+  position: fixed;
   display: flex;
   flex-direction: column;
   z-index: 10;
@@ -206,12 +207,13 @@ header .menu {
   right: 1.25rem;
   width: 11.5rem;
   height: 90vh;
-  z-index: -1;
   background: rgba(68, 65, 63, 0.5019607843) 0% 0% no-repeat padding-box;
   display: none;
 }
 header .menu.active {
+  position: fixed;
   display: block;
+  z-index: 8;
 }
 header .menu .menu-items {
   margin: 57px 42px 0px 25px;
@@ -228,4 +230,74 @@ header .menu .menu-items span {
   opacity: 1;
   margin: 11px 0 15px 0;
   border-radius: 5px;
+}
+
+.gallery-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 2.313rem;
+  margin: 1.688rem 2.688rem;
+  place-items: center;
+}
+.gallery-container img {
+  width: 18.313rem;
+  height: 18.313rem;
+  z-index: 7;
+}
+.gallery-container img:hover {
+  cursor: pointer;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70.375rem;
+  height: 39.25rem;
+  z-index: 9;
+  display: flex;
+  overflow: auto;
+  background: rgba(68, 65, 63, 0.5019607843);
+}
+.modal .modal-content .modal-content-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 5.813rem 1.875rem 0 1.625rem;
+  height: 366px;
+}
+.modal .modal-content .modal-content-text h2 {
+  text-align: left;
+  font-size: 2.375rem;
+  font: normal normal normal 38px/43px Sandro Universal;
+  letter-spacing: 0rem;
+  color: #ffffff;
+}
+.modal .modal-content .modal-content-text p {
+  text-align: left;
+  font-size: 1.75rem;
+  font: normal normal normal 28px/43px Sandro Universal;
+  letter-spacing: 0px;
+  color: #ffffff;
+}
+.modal .modal-content .modal-content-text .read-the-book {
+  font-size: 1.125rem;
+}
+.modal .modal-content .modal-content-text .read-the-book a {
+  cursor: pointer;
+}
+.modal .modal-content button {
+  position: absolute;
+  right: 0rem;
+  width: 3.75rem;
+  height: 2.875rem;
+}
+.modal .modal-content button img {
+  width: 1.875rem;
+  height: 1.938rem;
+}
+.modal img {
+  width: 39.25rem;
+  height: 39.25rem;
 }/*# sourceMappingURL=global.css.map */
