--- a/css/global.css
+++ b/css/global.css
@@ -248,56 +248,64 @@ header .menu .menu-items span {
   cursor: pointer;
 }
 
-.modal {
+#modal-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+}
+#modal-container .modal {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 70.375rem;
   height: 39.25rem;
-  z-index: 9;
   display: flex;
   overflow: auto;
   background: rgba(68, 65, 63, 0.5019607843);
 }
-.modal .modal-content .modal-content-text {
+#modal-container .modal .modal-content .modal-content-text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 5.813rem 1.875rem 0 1.625rem;
   height: 366px;
 }
-.modal .modal-content .modal-content-text h2 {
+#modal-container .modal .modal-content .modal-content-text h2 {
   text-align: left;
   font-size: 2.375rem;
   font: normal normal normal 38px/43px Sandro Universal;
   letter-spacing: 0rem;
   color: #ffffff;
 }
-.modal .modal-content .modal-content-text p {
+#modal-container .modal .modal-content .modal-content-text p {
   text-align: left;
   font-size: 1.75rem;
   font: normal normal normal 28px/43px Sandro Universal;
   letter-spacing: 0px;
   color: #ffffff;
 }
-.modal .modal-content .modal-content-text .read-the-book {
+#modal-container .modal .modal-content .modal-content-text .read-the-book {
   font-size: 1.125rem;
 }
-.modal .modal-content .modal-content-text .read-the-book a {
+#modal-container .modal .modal-content .modal-content-text .read-the-book a {
   cursor: pointer;
 }
-.modal .modal-content button {
+#modal-container .modal .modal-content button {
   position: absolute;
   right: 0rem;
   width: 3.75rem;
   height: 2.875rem;
 }
-.modal .modal-content button img {
+#modal-container .modal .modal-content button img {
   width: 1.875rem;
   height: 1.938rem;
 }
-.modal img {
+#modal-container .modal img {
   width: 39.25rem;
   height: 39.25rem;
 }/*# sourceMappingURL=global.css.map */
