--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -16,66 +16,75 @@
   }
 }
 
-.modal {
+#modal-container {
+  display: none;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 70.375rem;
-  height: 39.25rem;
-  z-index: 9;
-  display: flex;
-  overflow: auto;
-  background: $darkGrayWithOpacity;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
 
-  .modal-content {
-    .modal-content-text {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      margin: 5.813rem 1.875rem 0 1.625rem;
-      height: 366px;
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70.375rem;
+    height: 39.25rem;
+    display: flex;
+    overflow: auto;
+    background: $darkGrayWithOpacity;
 
-      h2 {
-        text-align: left;
-        font-size: 2.375rem;
-        font: normal normal normal 38px/43px Sandro Universal;
-        letter-spacing: 0rem;
-        color: $whiteColor;
+    .modal-content {
+      .modal-content-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 5.813rem 1.875rem 0 1.625rem;
+        height: 366px;
+
+        h2 {
+          text-align: left;
+          font-size: 2.375rem;
+          font: normal normal normal 38px/43px Sandro Universal;
+          letter-spacing: 0rem;
+          color: $whiteColor;
+        }
+
+        p {
+          text-align: left;
+          font-size: 1.75rem;
+          font: normal normal normal 28px/43px Sandro Universal;
+          letter-spacing: 0px;
+          color: $whiteColor;
+        }
+
+        .read-the-book {
+          font-size: 1.125rem;
+
+          a {
+            cursor: pointer;
+          }
+        }
       }
 
-      p {
-        text-align: left;
-        font-size: 1.75rem;
-        font: normal normal normal 28px/43px Sandro Universal;
-        letter-spacing: 0px;
-        color: $whiteColor;
-      }
+      button {
+        position: absolute;
+        right: 0rem;
+        width: 3.75rem;
+        height: 2.875rem;
 
-      .read-the-book {
-        font-size: 1.125rem;
-
-        a {
-          cursor: pointer;
+        img {
+          width: 1.875rem;
+          height: 1.938rem;
         }
       }
     }
 
-    button {
-      position: absolute;
-      right: 0rem;
-      width: 3.75rem;
-      height: 2.875rem;
-
-      img {
-        width: 1.875rem;
-        height: 1.938rem;
-      }
+    img {
+      width: 39.25rem;
+      height: 39.25rem;
     }
-  }
-
-  img {
-    width: 39.25rem;
-    height: 39.25rem;
   }
 }
