--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -5,36 +5,39 @@
   margin: 1.688rem 2.688rem;
   place-items: center;
 
-  img {
-    width: 18.313rem;
+  button {
+    border: none;
     height: 18.313rem;
-    z-index: 7;
 
-    &:hover {
-      cursor: pointer;
+    img {
+      width: 18.313rem;
+      height: 18.313rem;
+      z-index: 7;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
 
-#modal-container {
-  display: none;
+#gallery-popover {
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70.375rem;
+  height: 39.25rem;
+  overflow: auto;
+  background: $darkGrayWithOpacity;
 
   .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70.375rem;
-    height: 39.25rem;
     display: flex;
-    overflow: auto;
-    background: $darkGrayWithOpacity;
+
+    img {
+      width: 39.25rem;
+      height: 39.25rem;
+    }
 
     .modal-content {
       .modal-content-text {
@@ -42,7 +45,7 @@
         flex-direction: column;
         justify-content: space-between;
         margin: 5.813rem 1.875rem 0 1.625rem;
-        height: 366px;
+        height: 22.875rem;
 
         h2 {
           text-align: left;
@@ -76,15 +79,10 @@
         height: 2.875rem;
 
         img {
-          width: 1.875rem;
+          width: 1.938rem;
           height: 1.938rem;
         }
       }
-    }
-
-    img {
-      width: 39.25rem;
-      height: 39.25rem;
     }
   }
 }
