--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -17,6 +17,7 @@
       width: 18.313rem;
       height: 18.313rem;
       z-index: 7;
+      object-fit: cover;
 
       &:hover {
         cursor: pointer;
