--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -16,10 +16,13 @@ header {
       justify-content: space-between;
       gap: 0.125rem;
 
-      p {
+      button {
         font-size: 2.375rem;
         text-align: center;
         color: $darkGrayColor;
+        &:hover {
+          color: $darkGrayWithOpacity;
+        }
       }
 
       .toggle-btns {
