--- a/css/global.css
+++ b/css/global.css
@@ -252,7 +252,8 @@ header .menu .menu-items span {
   width: 18.313rem;
   height: 18.313rem;
   z-index: 7;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .gallery-container button img:hover {
   cursor: pointer;
