--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,6 @@
-@import "./reset";
-@import "./variables";
+@import "./utils/reset";
+@import "./utils/variables";
 @import "./mainStyles";
 @import "./header";
 @import "./gallery";
-@import "./animations";
+@import "./utils/animations";
