--- a/css/global.css
+++ b/css/global.css
@@ -201,6 +201,7 @@ header nav .nav-links .language-toggle-btns.active {
   display: flex;
   flex-direction: column;
   z-index: 10;
+  animation: button-slide-down 0.5s ease-out;
 }
 header nav .nav-links .toggle-btns.active .btn,
 header nav .nav-links .language-toggle-btns.active .btn {
@@ -220,6 +221,7 @@ header .menu.active {
   position: fixed;
   display: block;
   z-index: 8;
+  animation: menu-slide 0.5s ease-out;
 }
 header .menu .menu-items {
   margin: 57px 42px 0px 25px;
@@ -356,5 +358,25 @@ header .menu .menu-items span {
   }
   to {
     opacity: 1;
+  }
+}
+@keyframes button-slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes menu-slide {
+  from {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0%);
   }
 }/*# sourceMappingURL=global.css.map */
