--- a/styles/utils/_animations.scss
+++ b/styles/utils/_animations.scss
@@ -6,3 +6,25 @@
     opacity: 1;
   }
 }
+
+@keyframes button-slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-30%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes menu-slide {
+  from {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
