--- a/css/global.css
+++ b/css/global.css
@@ -329,29 +329,66 @@ header .menu .menu-items span {
 
 #pagination {
   display: flex;
-  justify-content: space-between;
-  width: 172px;
-  height: 45px;
-  margin: auto;
-  text-align: center;
-  padding: 1rem 0;
-  font: normal normal normal 38px/45px Sandro Universal;
-  letter-spacing: 0px;
+  justify-content: center;
+  align-items: center;
 }
-#pagination button {
-  border: none;
-  background-color: transparent;
-  font-size: 38px;
+#pagination ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border-radius: 5px;
+}
+#pagination ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
+  font-size: 34px;
+  font: normal normal normal 38px/43px Sandro Universal;
 }
-#pagination button:hover {
+#pagination ul li a {
+  padding: 5px 10px;
   cursor: pointer;
-  color: #000;
 }
-#pagination button:active, #pagination button:disabled {
+#pagination ul li.active, #pagination ul li:hover {
+  background-color: #d9d9d9;
+  transition: all 0.5s ease;
+}
+#pagination ul li.active a, #pagination ul li:hover a {
   color: #000;
 }
 
+@media screen and (min-width: 1920px) {
+  .gallery-container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media screen and (max-width: 1360px) {
+  .gallery-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 1024px) {
+  .gallery-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 768px) {
+  .gallery-container {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (min-height: 800px) and (min-width: 1360px) {
+  #pagination {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 @keyframes pop-over-slide {
   from {
     opacity: 0;
