--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -99,29 +99,67 @@
 }
 
 #pagination {
-  @include display_flex(space-between, null);
-  width: 172px;
-  height: 45px;
-  margin: auto;
-  text-align: center;
-  padding: 1rem 0;
-  font: normal normal normal 38px/45px Sandro Universal;
-  letter-spacing: 0px;
+  @include display_flex();
+  ul {
+    @include display_flex();
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    border-radius: 5px;
 
-  button {
-    border: none;
-    background-color: transparent;
-    font-size: 38px;
-    color: $whiteColor;
+    li {
+      @include display_flex();
+      color: $whiteColor;
+      font-size: 34px;
+      font: normal normal normal 38px/43px Sandro Universal;
 
-    &:hover {
-      cursor: pointer;
-      color: $blackColor;
+      a {
+        padding: 5px 10px;
+        cursor: pointer;
+      }
+
+      &.active,
+      &:hover {
+        background-color: $lightGrayColor;
+        transition: all 0.5s ease;
+
+        a {
+          color: $blackColor;
+        }
+      }
     }
+  }
+}
 
-    &:active,
-    &:disabled {
-      color: $blackColor;
-    }
+@media screen and (min-width: 1920px) {
+  .gallery-container {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media screen and (max-width: 1360px) {
+  .gallery-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .gallery-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .gallery-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-height: 800px) and (min-width: 1360px) {
+  #pagination {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
