--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,9 +17,11 @@ header {
       gap: 0.125rem;
 
       button {
+        font: normal normal normal 22px/27px Sandro Universal;
         font-size: 2.375rem;
         text-align: center;
         color: $darkGrayColor;
+
         &:hover {
           color: $darkGrayWithOpacity;
         }
