--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 @import "./utils/reset";
 @import "./utils/variables";
+@import "./fonts";
 @import "./mainStyles";
 @import "./header";
 @import "./gallery";
