--- a/styles/_gallery.scss
+++ b/styles/_gallery.scss
@@ -105,16 +105,16 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
 
     li {
       @include display_flex();
       color: $whiteColor;
-      font-size: 34px;
+      font-size: 2.125rem;
       font: normal normal normal 38px/43px Sandro Universal;
 
       a {
-        padding: 5px 10px;
+        padding: 0.3125rem 0.625rem;
         cursor: pointer;
       }
 
@@ -131,34 +131,46 @@
   }
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 120rem) {
   .gallery-container {
     grid-template-columns: repeat(5, 1fr);
   }
 }
 
-@media screen and (max-width: 1360px) {
+@media screen and (max-width: 85rem) {
   .gallery-container {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  #pagination {
+    padding-bottom: 1.688rem;
+  }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 64rem) {
   .gallery-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
   .gallery-container {
     grid-template-columns: 1fr;
   }
+
+  #pagination {
+    li {
+      &.arrow {
+        display: none;
+      }
+    }
+  }
 }
 
-@media screen and (min-height: 800px) and (min-width: 1360px) {
+@media screen and (min-height: 50rem) and (min-width: 85rem) {
   #pagination {
     position: absolute;
-    bottom: 20px;
+    bottom: 0;
     left: 50%;
     transform: translate(-50%, -50%);
   }
