--- a/css/global.css
+++ b/css/global.css
@@ -381,10 +381,43 @@ header .menu .menu-items span {
   #pagination {
     padding-bottom: 1.688rem;
   }
+  #gallery-popover {
+    width: 90%;
+  }
+  #gallery-popover .modal img {
+    width: 50%;
+  }
 }
 @media screen and (max-width: 64rem) {
   .gallery-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  #gallery-popover {
+    height: 90%;
+    width: 30rem;
+  }
+  #gallery-popover .modal {
+    flex-direction: column-reverse;
+    justify-content: space-between;
+  }
+  #gallery-popover .modal .modal-image {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    margin: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text {
+    margin-top: 0.5rem;
+    height: 20rem;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text h2 {
+    font-size: 1.5rem;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text p {
+    font-size: 1.125rem;
   }
 }
 @media screen and (max-width: 48rem) {
@@ -393,6 +426,20 @@ header .menu .menu-items span {
   }
   #pagination li.arrow {
     display: none;
+  }
+}
+@media screen and (max-width: 35rem) {
+  #gallery-popover {
+    width: 20rem;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text {
+    margin-top: 0.2rem;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text h2 {
+    font-size: 1.25rem;
+  }
+  #gallery-popover .modal .modal-content .modal-content-text p {
+    font-size: 1rem;
   }
 }
 @media screen and (min-height: 50rem) and (min-width: 85rem) {
